cyclonedx-bom/src/specs/v1_3/snapshots/cyclonedx_bom__specs__v1_3__attached_text__test__it_should_write_xml_no_attributes.snap
---
source: cyclonedx-bom/src/specs/v1_3/attached_text.rs
assertion_line: 132
expression: xml_output

---
<?xml version="1.0" encoding="utf-8"?>
<text>content</text>
